namespace Data.Enum.Field
{
    public enum TileState
    {
        None,
        Painted,
        GoldPainted
    }
}