namespace Data.Enum.Player
{
    public enum PlayerMoveType
    {
        Idle,
        Front,
        Back,
        Left,
        Right
    }
}